* add IdKoduPromocji to Zamowienie * adapt relationships * add migrations * refresh api for mobile, WWW * Add KodPromocjiController * add data for KodPromocji to seeding
