# SklepInternetowy.WWW/OpenAPIs/swagger.json
@@ -560,6 +560,191 @@
         }
       }
     },
+    "/api/KodPromocjis": {
+      "get": {
+        "tags": [
+          "KodPromocjis"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/KodPromocji"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/KodPromocji"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/KodPromocji"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "KodPromocjis"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/KodPromocji"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/KodPromocji"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/KodPromocji"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/KodPromocji"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/KodPromocji"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/KodPromocji"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/KodPromocjis/{id}": {
+      "get": {
+        "tags": [
+          "KodPromocjis"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/KodPromocji"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/KodPromocji"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/KodPromocji"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "KodPromocjis"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/KodPromocji"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/KodPromocji"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/KodPromocji"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "KodPromocjis"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/Konto/register": {
       "post": {
         "tags": [
@@ -1783,6 +1968,26 @@
         },
         "additionalProperties": false
       },
+      "KodPromocji": {
+        "type": "object",
+        "properties": {
+          "idKoduPromocji": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "idPromocji": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "idKodu": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "LoginDto": {
         "type": "object",
         "properties": {
@@ -2104,6 +2309,11 @@
             "nullable": true
           },
           "idMetodyPlatnosci": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "idKoduPromocji": {
             "type": "integer",
             "format": "int32",
             "nullable": true
